add code on register login in swagger
