# routes/api.php
@@ -33,27 +33,24 @@ Route::post('/logout',[AuthController::class,'logout'])->middleware('auth:sanctu
 
 Route::post('/forgot_password',[NewPasswordController::class,'forgotpassword']);
 
-// ROUTE FOR SEND FRIEND REQUEST
-    Route::post('/send-friend-request', [FriendRequestController::class, 'sendFriendRequest']);
-    Route::put('accept-friend-request/{id}', [FriendRequestController::class, 'acceptFriendRequest']);
-    Route::delete('reject-friend-request/{id}', [FriendRequestController::class, 'rejectFriendRequest']);
-
-    Route::middleware('auth:sanctum')->group(function () {
-        // Route for fetching friend requests
-        Route::get('/friend-requests', [FriendRequestController::class, 'index']);
+Route::middleware('auth:sanctum')->group(function () {
+     // Route for fetching friend requests
+    Route::get('/friend-requests', [FriendRequestController::class, 'index']);
     
-        // Route for sending a friend request
-        Route::post('/send-friend-request', [FriendRequestController::class, 'addfriend']);
+    // Route for sending a friend request
+    Route::post('/send-friend-request', [FriendRequestController::class, 'addfriend']);
     
-        // Route for updating a friend request (accept or reject)
-        Route::put('/friend-accept/{id}', [FriendRequestController::class, 'acceptfriend']);
+    // Route for updating a friend request (accept or reject)
+    Route::put('/friend-accept/{id}', [FriendRequestController::class, 'acceptfriend']);
     
-        // Route for deleting a friend request
-        Route::delete('/friend-requests/{id}', [FriendRequestController::class, 'rejectfriend']);
+    // Route for deleting a friend request
+    Route::delete('/friend-requests/{id}', [FriendRequestController::class, 'rejectfriend']);
     
-        // Route for fetching the list of friends
-        Route::get('/friends-list', [FriendRequestController::class, 'friendsList']);
-    });
+    // Route for fetching the list of friends
+    Route::get('/friends-list', [FriendRequestController::class, 'friendsList']);
+});
 
 // THIS ROUT FOR SWAGGER
 Route::get('users/list', [AuthController::class, 'index'])->name('user.profile.list');
+Route::post('/register', [AuthController::class, 'register'])->name('register');
+Route::post('/login', [AuthController::class, 'login'])->name('register');
